--- a/app/src/main/res/drawable/top_shadow_gradient.xml
+++ b/app/src/main/res/drawable/top_shadow_gradient.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="#30ffffff"
-        android:startColor="#40000000" />
+        android:endColor="#F0F0F0"
+        android:startColor="#D9D9D9" />
 </shape>
