--- a/app/src/main/res/layout/fragment_dineout.xml
+++ b/app/src/main/res/layout/fragment_dineout.xml
@@ -6,5 +6,11 @@
     tools:context=".ui.main.fragments.dineout.DineoutFragment">
 
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Dineout"
+        android:textColor="@color/grey"
+        android:textSize="12sp" />
 
 </FrameLayout>
