--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.fragments.food.FoodFragment">
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Food"
+        android:textColor="@color/grey"
+        android:textSize="12sp" />
 
 </FrameLayout>
