--- a/app/src/main/res/layout/fragment_genie.xml
+++ b/app/src/main/res/layout/fragment_genie.xml
@@ -5,5 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.fragments.genie.GenieFragment">
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Genie"
+        android:textColor="@color/grey"
+        android:textSize="12sp" />
 </FrameLayout>
