--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.fragments.home.HomeFragment">
 
-    
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Home"
+        android:textColor="@color/grey"
+        android:textSize="12sp" />
 
 </FrameLayout>
