--- a/app/src/main/res/layout/fragment_instamart.xml
+++ b/app/src/main/res/layout/fragment_instamart.xml
@@ -5,5 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.fragments.instamart.InstamartFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Instamart"
+        android:textColor="@color/grey"
+        android:textSize="12sp" />
 
 </FrameLayout>
