--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,14 @@
     <color name="blue">#FF0000FF</color>
 
     <color name="orange">#F06414</color>
+    <color name="light_orange">#FF5722</color>
     <color name="grey">#8D8E91</color>
     <color name="dark_grey">#6E6F74</color>
     <color name="bg_pink">#FEdBDc</color>
     <color name="bg_violet">#E6E1FC</color>
+
+    <color name="text_color">#333333</color>
+    <color name="hint_text_color">#B7B7B7</color>
+    <color name="inactive_text_color">#8D8D8D</color>
+    <color name="error_color">@android:color/holo_red_light</color>
 </resources>
