--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,23 +25,9 @@
         android:layout_height="3dp"
         android:background="@drawable/top_shadow_gradient"
         android:translationZ="100sp"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view"
+        app:layout_constraintBottom_toTopOf="@+id/ll_navbar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav_view"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:background="@color/white"
-        android:elevation="8dp"
-        app:itemTextColor="@color/white"
-        app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/app_navbar" />
-
 
     <LinearLayout
         android:id="@+id/ll_navbar"
@@ -56,171 +42,108 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/nav_home_container"
+            style="@style/NavTabContainer"
+            android:layout_weight="0.2">
 
             <View
-                android:id="@+id/view_home"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/orange"
-                android:visibility="gone" />
+                android:id="@+id/nav_home_indicator"
+                style="@style/NavIndicator" />
 
             <ImageView
-                android:layout_width="30sp"
-                android:layout_height="30sp"
-                android:layout_marginBottom="5dp"
+                android:id="@+id/iv_nav_home"
+                style="@style/NavIcon"
                 android:contentDescription="@string/swiggy"
                 android:src="@drawable/icon_swiggy" />
 
             <TextView
-                android:id="@+id/tv_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:text="@string/swiggy"
-                android:textColor="@color/grey"
-                android:textSize="12sp" />
-
-
+                android:id="@+id/tv_nav_home"
+                style="@style/NavLabel"
+                android:text="@string/swiggy" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/nav_food_container"
+            style="@style/NavTabContainer"
+            android:layout_weight="0.2">
 
             <View
-                android:id="@+id/view_food"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/orange"
-                android:visibility="gone" />
+                android:id="@+id/nav_food_indicator"
+                style="@style/NavIndicator" />
 
             <ImageView
-                android:layout_width="30sp"
-                android:layout_height="30sp"
-                android:layout_marginBottom="5dp"
-
+                android:id="@+id/iv_nav_food"
+                style="@style/NavIcon"
                 android:contentDescription="@string/food"
                 android:src="@drawable/icon_food" />
 
             <TextView
-                android:id="@+id/tv_food"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:text="@string/food"
-                android:textColor="@color/grey"
-                android:textSize="12sp" />
-
-
+                android:id="@+id/tv_nav_food"
+                style="@style/NavLabel"
+                android:text="@string/food" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/nav_instamart_container"
+            style="@style/NavTabContainer"
+            android:layout_weight="0.2">
 
             <View
-                android:id="@+id/view_instamart"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/orange"
-                android:visibility="gone" />
+                android:id="@+id/nav_instamart_indicator"
+                style="@style/NavIndicator" />
 
             <ImageView
-                android:layout_width="30sp"
-                android:layout_height="30sp"
-                android:layout_marginBottom="5dp"
-
+                android:id="@+id/iv_nav_instamart"
+                style="@style/NavIcon"
                 android:contentDescription="@string/instamart"
                 android:src="@drawable/icon_instamart" />
 
             <TextView
-                android:id="@+id/tv_instamart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:text="@string/instamart"
-                android:textColor="@color/grey"
-                android:textSize="12sp" />
-
-
+                android:id="@+id/tv_nav_instamart"
+                style="@style/NavLabel"
+                android:text="@string/instamart" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/nav_dineout_container"
+            style="@style/NavTabContainer"
+            android:layout_weight="0.2">
 
             <View
-                android:id="@+id/view_dineout"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/orange"
-                android:visibility="gone" />
+                android:id="@+id/nav_dineout_indicator"
+                style="@style/NavIndicator" />
 
             <ImageView
-                android:layout_width="20sp"
-                android:layout_height="30sp"
-                android:layout_marginBottom="5dp"
-
+                android:id="@+id/iv_nav_dineout"
+                style="@style/NavIcon"
                 android:contentDescription="@string/dineout"
                 android:src="@drawable/icon_dineout" />
 
             <TextView
-                android:id="@+id/tv_dineout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:text="@string/dineout"
-                android:textColor="@color/grey"
-                android:textSize="12sp" />
-
-
+                android:id="@+id/tv_nav_dineout"
+                style="@style/NavLabel"
+                android:text="@string/dineout" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/nav_genie_container"
+            style="@style/NavTabContainer"
+            android:layout_weight="0.2">
 
             <View
-                android:id="@+id/view_genie"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/orange"
-                android:visibility="gone" />
+                android:id="@+id/nav_genie_indicator"
+                style="@style/NavIndicator" />
 
             <ImageView
-                android:layout_width="30sp"
-                android:layout_height="30sp"
-                android:layout_marginBottom="5dp"
-
+                android:id="@+id/iv_nav_genie"
+                style="@style/NavIcon"
                 android:contentDescription="@string/genie"
                 android:src="@drawable/icon_genie" />
 
             <TextView
-                android:id="@+id/tv_genie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:text="@string/genie"
-                android:textColor="@color/grey"
-                android:textSize="12sp" />
-
+                android:id="@+id/tv_nav_genie"
+                style="@style/NavLabel"
+                android:text="@string/genie" />
         </LinearLayout>
 
     </LinearLayout>
