--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,9 +4,44 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
+
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">@color/white</item>
     </style>
 
     <style name="Theme.AndroidApp" parent="Base.Theme.AndroidApp" />
+
+    <!-- Start Navigation Styles -->
+    <style name="NavTabContainer">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
+    <style name="NavIndicator">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:background">@color/orange</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="NavIcon">
+        <item name="android:layout_width">28sp</item>
+        <item name="android:layout_height">28sp</item>
+        <item name="android:layout_marginVertical" tools:ignore="NewApi">5dp</item>
+    </style>
+
+    <style name="NavLabel">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/swiggy_font_medium</item>
+        <item name="android:color">@color/grey</item>
+        <item name="android:layout_marginBottom" tools:ignore="NewApi">5dp</item>
+    </style>
+    <!-- End Navigation Styles -->
+
 </resources>
