--- a/app/src/main/res/layout/dialog_notify.xml
+++ b/app/src/main/res/layout/dialog_notify.xml
@@ -5,35 +5,31 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="24dp"
     tools:context=".base.dialogs.NotifyDialog">
+
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp" />
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="24dp" />
+        android:layout_marginTop="16dp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="22dp"
-        android:background="#e6e6e6" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnOK"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/bg_btn_primary"
+        android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
