--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -3,13 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/jsonPlaceHolderFragment">
-
-    <fragment
-        android:id="@+id/jsonPlaceHolderFragment"
-        android:name="com.pth.androidapp.ui.auth.fragments.jsonPlaceHolder.JsonPlaceHolderFragment"
-        android:label="fragment_json_place_holder"
-        tools:layout="@layout/fragment_json_place_holder" />
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/loginFragment"
@@ -24,6 +18,7 @@
             app:destination="@id/main_nav_graph"
             app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.pth.androidapp.ui.auth.fragments.register.RegisterFragment"
@@ -34,11 +29,7 @@
             app:destination="@id/loginFragment"
             app:popUpToInclusive="true" />
     </fragment>
-    <include app:graph="@navigation/main_nav_graph" />
-    <action
-        android:id="@+id/action_global_loginFragment"
-        app:destination="@id/loginFragment"
-        app:popUpToInclusive="true" />
 
+    <include app:graph="@navigation/main_nav_graph" />
 
 </navigation>
