--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,4 +44,29 @@
     </style>
     <!-- End Navigation Styles -->
 
+    <!-- TextInputLayout style -->
+    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:textColorHint">@color/hint_text_color</item>
+        <item name="hintTextColor">@color/orange</item>
+        <item name="boxStrokeColor">@color/orange</item>
+    </style>
+    <!-- End TextInputLayout style -->
+
+    <!-- TextInputEditText -->
+    <style name="MyTextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <!-- End TextInputEditText style -->
+
+    <!-- AppCompatButton -->
+    <style name="MyAppCompatButton" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:background">@drawable/bg_btn_primary</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <!-- End AppCompatButton style -->
+
 </resources>
