--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,24 +39,41 @@
                         android:layout_marginBottom="20dp"
                         android:clipToPadding="false">
 
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/sliderLoading"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            app:shimmer_auto_start="true"
+                            android:paddingStart="16dp"
+                            android:paddingEnd="16dp"
+                            android:visibility="visible">
+                            <com.google.android.material.card.MaterialCardView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:cardCornerRadius="15dp"
+                                app:strokeWidth="0dp">
+                                <View
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:background="@color/shimmer_background" />
+                            </com.google.android.material.card.MaterialCardView>
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+
                         <androidx.viewpager2.widget.ViewPager2
                             android:id="@+id/vp_slide_home"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:paddingStart="60dp"
                             android:paddingEnd="60dp"
-                            android:visibility="visible" />
+                            android:visibility="gone" />
 
-                        <TextView
-                            android:id="@+id/tv_slider_error"
+                        <include
+                            layout="@layout/view_error"
+                            android:id="@+id/slider_error"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textColor="#B00020"
-                            android:textSize="16sp"
-                            android:visibility="gone"
-                            android:text="@string/some_thing_went_wrong_please_try_again_later"
-                            tools:ignore="MissingConstraints" />
+                            android:layout_height="match_parent"
+                            android:layout_marginHorizontal="16dp"
+                            android:visibility="gone" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
             </ScrollView>
