--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -55,6 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress"
+                        android:imeOptions="actionNext"
                         android:text="@{viewModel.emailState.text}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,6 +74,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword"
+                        android:imeOptions="actionDone"
                         android:text="@{viewModel.passwordState.text}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
