--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".presentation.main.MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="main" />
 </androidx.constraintlayout.widget.ConstraintLayout>
